client/assets/app.css
html, body {
  font-family: 'Roboto', sans-serif;
  font-size:14px;
  height:100%;
  margin: 0px;
  padding: 0px;
}

[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
  display: none !important;
}


/* Layout */

.wrapper{
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-flex;
  display: ms-flexbox;
  display: flex;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  -moz-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;  
  height: 100%;
}

.wrapper md-content{
  height: 100%;
  width: 100%;
}

.background{
  background-color: #f0f0f0;
  height: 100%;
}

.child-list{
  padding-right: 16px;
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-flex;
  display: ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -mox-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: flex-start;
  -moz-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
}

.child-list h2{
  font-weight: 400;
  margin-bottom: 24px;
  -webkit-flex: 1 0 50%;
  -ms-flex: 1 0 50%;
  flex: 1 0 50%;
}

.device-search{
  height: 100%;
  -webkit-flex: 1 0 200px;
  -ms-flex: 1 0 200px;
  flex: 1 0 200px;
  margin-top: 10px;
  background: none;
  border-bottom: 1px solid rgba(0,0,0,0.12);
}

md-title{
  font-size: 1.3em;
  font-weight: 400;
}

md-content{
    height: calc(100% - 64px);
}

.md-fab{
  background: #ffa000 !important;
}

.md-fab md-icon{
  color: white !important;
}
/*
md-tab-item{
  max-width: none !important;
}

md-tab-item{
  background-color: white;
  box-shadow: 2px 2px 7px 1px rgba(199,199,199,1);
  color: rgba(0,0,0,0.54);
}

md-tab-item.md-tab.md-active{
  color: white;
  background-color: rgb(33,150,243)
}*/

md-tabs,
md-grid-list{
  width: 100%;  
}

/*md-tabs md-tabs-wrapper{
  margin-bottom: 16px;
}*/

[ng-click],
[data-ng-click],
[x-ng-click] {
    cursor: pointer;
}


/* Typography */

h2{
  font-weight: 500;
}


/* Sidebar */

.sidebar-container{
  -webkit-flex: 0 0 300px;
  -ms-flex: 0 0 300px;
  flex: 0 0 300px;
  position: relative;
}

.sidebar {
  box-shadow: 2px 2px 7px 1px rgba(199,199,199,1);
  margin: -10px 0px 0px -10px !important;
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-flex;
  display: ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -moz-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;  
  position: fixed;
  width: 305px;
  height: 100%;
}

.sidebar md-content{
  padding-bottom: 60px;
}

@media only screen and (max-width: 640px) {
  .sidebar-container{
    -webkit-flex: 0;
    -ms-flex: 0;
    flex: 0;
  }
  .sidebar {
    display: none;
  }
}

.sidebar [layout-padding]{
  padding-left: 16px;
  padding-right: 16px;
}

.sidebar h2{
  padding: 0px 8px;
}

.sidebar .list-box{
  height: auto !important;
}

.sidebar md-input-container{
  padding: 0px 8px 24px 8px;
}

.sidebar md-input-container .md-select-value{
  padding-left: 6px;
}

.main-content {
  background-color: #f0f0f0;
  padding: 16px;
}


/* Breadcrumb */

.breadcrumb { 
  list-style: none; 
  padding-left: 24px;
  padding-right: 24px;
}

.breadcrumb md-icon{
  margin-right: 4px;
  margin-left: 6px;
}

.breadcrumb .md-title{
  font-size: 1em;
}

.breadcrumb li { 
  display: inline;
  list-style-type: none;
  padding-right: 10px;
}
.breadcrumb li a, .breadcrumb:visited li a, .breadcrumb:hover li a, .breadcrumb:active li a {
  text-decoration: none; 
  color: #ffffff;
}

.breadcrumb a, .breadcrumb:visited a, .breadcrumb:hover a, .breadcrumb:active a {
  text-decoration: none; 
  color: #ffffff;
}


/* Toolbar area */

.menu {
  background-color: transparent;
  border: none;
  height: 38px;
  margin: 16px;
  width: 36px;
}

md-toolbar h1 {
  margin: auto;
}


/* Sidenav area */

md-list .md-button {
  color: inherit;
  font-weight: 500;
  text-align: left;
  width: 100%;
}
md-list .md-button.selected {
  color: #03a9f4;
}

md-sidenav  md-list {
  padding: 0px 0px 8px 0px;
}


/* Content */

.view-toggle{

}

.device-table{
  border-spacing: 0px;
  margin: 0px 16px;
}

.device-table tr{
  height: 32px;
  min-height: 32px;
  padding: 0 16px;
}

.device-table th, td{
  border-bottom: 1px solid #ebebeb;
}

.device-table tr:last-of-type td{
  border-bottom: none;
}

.device-table tr td{
  padding: 4px 4px;
  font-size: 16px;
  color: #707070;
}

.device-table md-icon{
  height: 18px;
  width: 18px;
}

.device-table tr:first-of-type th:first-of-type,
.device-table tr td:first-of-type{
  padding-left: 16px;
}

.device-table tr:first-of-type th:last-of-type,
.device-table tr td:last-of-type{
  padding-right: 16px;
}

.device-table-row:hover{
  background-color: #CDE9FF;
}


/* Cards */

.card {
  background: #fff;
  border-radius: 2px;
  box-shadow: 2px 2px 7px 1px rgba(199,199,199,1);
}


/* Maps */

.angular-google-map-container {
  height: 600px;
}


/* Primary content area */

#content {
  overflow: hidden;
}

#content  {
  padding-left: 40px;
  padding-right: 40px;
  padding-top: 5px;
}

#content .md-button.contact {
  background-color: transparent;
  border: none;
  width: 48px;
  height: 48px;
  margin: 8px auto 16px 0;
  position: absolute;
  top: 10px;
  right: 40px;
}

#content md-icon.avatar {
  margin-top: 10px;
}

#content .md-button.contact > md-icon {
  fill:black;
  width:36px;
  height:36px;
}

md-button.menuBtn > md-icon {
  fill:white;
  width:24px;
  height:24px;
}

#content .md-button.contact:active > md-icon {
  background-color: #dadada;
  border-radius: 75%;
  padding:4px;
  transition: all 100ms ease-out 30ms;
}

#content img {
  display: block;
  height: auto;
  max-width: 500px;
}


/* Utils */

.content-wrapper {
  position: relative;
}


/* Typography support coming in 0.8.0 */

md-toolbar h1 {
  font-size: 1.250em;
  font-weight: 400;
}

.avatar {
  position: relative;
  width: 128px;
  height: 128px;
  border: 1px solid #ddd;
  border-radius: 50%;
  display: inline-block;
  overflow: hidden;
  margin: 0px;
  vertical-align: middle;
  zoom:0.70;
  transform: translateZ(0);
  -webkit-transform: scale(0.70);
  -moz-transform:scale(0.70);
}

md-bottom-sheet  md-icon {
  margin-right:20px;
}

span.name {
  font-weight: bold;
  font-size:1.1em;
  padding-left:5px;
}

* { box-sizing:border-box; }

form {
  width: 380px;
  margin: 4em auto;
  padding: 3em 2em 2em 2em;
  background: #fafafa;
  border: 1px solid #ebebeb;
  box-shadow: rgba(0,0,0,0.14902) 0px 1px 1px 0px,rgba(0,0,0,0.09804) 0px 1px 2px 0px;
}

input {
  font-size: 18px;
  padding: 10px 10px 10px 5px;
  -webkit-appearance: none;
  display: block;
  background: #fafafa;
  color: #636363;
  width: 100%;
  border: none;
  border-radius: 0;
  border-bottom: 1px solid #757575;
}

input:focus { outline: none; }


/* Label */

label {
  color: #999; 
  /*font-size: 14px;*/
  font-weight: normal;
  position: absolute;
  pointer-events: none;
  left: 5px;
  top: 10px;
  transition: all 0.2s ease;
}


/* active */

input:focus ~ label, input.used ~ label {
  top: -20px;
  transform: scale(.75); left: -2px;
  /* font-size: 14px; */
  color: #4a89dc;
}


/* Button */

.button {
  position: relative;
  display: inline-block;
  padding: 12px 24px;
  margin: .3em 0 1em 0;
  width: 100%;
  vertical-align: middle;
  color: #fff;
  font-size: 16px;
  line-height: 20px;
  -webkit-font-smoothing: antialiased;
  text-align: center;
  letter-spacing: 1px;
  background: transparent;
  border: 0;
  border-bottom: 2px solid #3160B6;
  cursor: pointer;
  transition: all 0.15s ease;
}
.button:focus { outline: 0; }


/* Button modifiers */

.buttonBlue {
  background: #4a89dc;
  text-shadow: 1px 1px 0 rgba(39, 110, 204, .5);
}

.buttonBlue:hover { background: #357bd8; }


.logEntries.active{
  background-color: rgb(222, 222, 222) !important;
  border: 0px;

}

.logEntries.active md-icon{
  background-color: #8A8A8A;

}


.logEntries md-icon{
  border: 1px solid #8A8A8A;
  border-radius: 15px;
  transition: background-color 0.15s ease;
}


#timeline.opened{
  height: auto;
}

#detail-text {
  position: absolute;
  top: 325px;
  width: 890px;
  height: 200px;
  left: 30px;
  overflow-y: scroll;
}

#timeline-detail{
  opacity: 0;
  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
}
#timeline-detail.open{
  opacity: 1;  
}

pre.pretty-json{
  background-color: #f1f1f1;
  outline: 0px;
}


#data-points .check-in-point-shadow {
  opacity: 1;
  cursor: pointer;
}

#data-points .check-in-point {
  opacity: 0;
  cursor: pointer;
}
#data-points .check-in-point:hover {
  opacity: 0.3;
}


.check-in-point-tooltip {
  font-size: 0.8em;
}

.nav-button {
  font-size: 0.8em;
  fill: #888;
  cursor: pointer
}

.nav-button:hover {
  fill: #333;
}

.checkin-label{
  margin-left: 10px;
  color: white !important;
  width: 80px;
  text-align: center;
  border-radius: 3px;
  text-transform: uppercase;
  font-size: 12px !important;
}

.checkin-camera-numbers{
  background-color: gray;
  color: white;
  padding: 2px 7px;
  border-radius: 3px;
  font-size: 12px !important;
}

.logEntries{
  min-height: 40px;
  height: 60px;
  transition: all linear 0.3s;
}

.logEntries.ng-hide {
  opacity: 0;
  padding: 0;
  min-height: 0px;
  height: 0px;
}

